Fixed styling issues on mobile
I found that there were some issues regarding styling on the mobile version of
the app. I have since fixed much of it and I think that it is now in a
presentable state for smart phone and tablets.

--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -106,6 +106,11 @@ width: auto;
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
+#map {
+    visibility:hidden;
+}
+
+
 @media (min-width: 768px) {
     /* Navbar positioning foo */
     .navbar-wrapper {
@@ -140,15 +145,25 @@ width: auto;
         left: -2000;
     }
 
+    #map {
+        visibility:visible;
+    }
+
 }
 
 @media (min-width: 992px) {
     .featurette-heading {
         margin-top: 120px;
     }
+
+    #map > img {
+        visibility:visible;
+    }
+
 }
 
 .btn-lg {
     font-size: 15px;
 }
+
 
